feat:add git  config of diff, commit templete

--- a/config/.gitconfig
+++ b/config/.gitconfig
@@ -3,3 +3,14 @@
 [user]
 	email = lmguo@robosense.cn
 	name = guoleiming
+[diff]
+	guitool = meld
+	tool = meld
+[difftool]
+	prompt = false
+[merge]
+	tool = meld
+[http]
+	sslVerify = false
+[commit]
+	template = /home/glm/.gitmessage.txt
